[gd_scene load_steps=9 format=2]

[ext_resource path="res://items/Resources/getItem.gd" type="Script" id=1]
[ext_resource path="res://items/HPon.gd" type="Script" id=2]
[ext_resource path="res://items/Resources/hpon.png" type="Texture" id=3]
[ext_resource path="res://Music/startSong.gd" type="Script" id=4]
[ext_resource path="res://gui/PaletteSprite.tres" type="Material" id=5]

[sub_resource type="Animation" id=1]
resource_name = "collect"
length = 0.35
step = 0.05
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.017295, -5.06503, -8, -0.1, 0, 0.0969265, 0.958139, 4, -0.0159007, -5.68349, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.35 )
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.35 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "delayed_free"
length = 0.35
step = 0.05
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.35 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 7.0

[node name="HPon" type="Node2D"]
script = ExtResource( 1 )
itemCommand = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/collect = SubResource( 1 )
anims/delayed_free = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.857143 )
material = ExtResource( 5 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="CollectPing" type="Node" parent="."]
script = ExtResource( 4 )
sound = 6

[connection signal="collected" from="." to="CollectPing" method="start_sound"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
